Upgraded Java to JDK11 (using Oracle JDK)